--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -552,7 +552,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Devices" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7w-cb-MbB">
-                                        <rect key="frame" x="107.5" y="31.5" width="105" height="21"/>
+                                        <rect key="frame" x="101.5" y="33" width="117" height="18"/>
                                         <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="18"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -644,13 +644,25 @@
                                     <outlet property="delegate" destination="Kib-3X-Zyf" id="9rh-X7-yIQ"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No devices" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSb-Q2-MhK">
-                                <rect key="frame" x="115" y="259.5" width="90" height="21"/>
-                                <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="18"/>
-                                <color key="textColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                                <size key="shadowOffset" width="0.0" height="2"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lAN-Xy-clq">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No devices" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSb-Q2-MhK">
+                                        <rect key="frame" x="111" y="231" width="98.5" height="18"/>
+                                        <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="18"/>
+                                        <color key="textColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <size key="shadowOffset" width="0.0" height="2"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="HSb-Q2-MhK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lAN-Xy-clq" secondAttribute="leading" constant="20" id="Lxp-z2-sgF"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HSb-Q2-MhK" secondAttribute="trailing" constant="20" id="gmz-cA-ZiY"/>
+                                    <constraint firstItem="HSb-Q2-MhK" firstAttribute="centerX" secondItem="lAN-Xy-clq" secondAttribute="centerX" id="oru-rI-V4D"/>
+                                    <constraint firstItem="HSb-Q2-MhK" firstAttribute="centerY" secondItem="lAN-Xy-clq" secondAttribute="centerY" id="rCN-VZ-gRg"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fPe-UK-gb5" customClass="SearchBarView" customModule="Particle" customModuleProvider="target">
                                 <rect key="frame" x="12" y="64" width="254" height="45"/>
                                 <subviews>
@@ -731,16 +743,16 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="xB3-Ur-rz3" firstAttribute="top" secondItem="doS-be-EZj" secondAttribute="top" id="1vk-uV-3Sq"/>
-                            <constraint firstItem="2Ds-AZ-r34" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HSb-Q2-MhK" secondAttribute="trailing" constant="20" id="37K-mC-MRu"/>
                             <constraint firstItem="DmZ-hI-cQj" firstAttribute="top" secondItem="fPe-UK-gb5" secondAttribute="bottom" id="3rS-aR-dtn"/>
                             <constraint firstItem="l8r-gu-33x" firstAttribute="trailing" secondItem="doS-be-EZj" secondAttribute="trailing" id="4tY-y9-6tC"/>
-                            <constraint firstItem="HSb-Q2-MhK" firstAttribute="centerY" secondItem="2Ds-AZ-r34" secondAttribute="centerY" constant="20" id="BhF-q9-8Pt"/>
-                            <constraint firstItem="HSb-Q2-MhK" firstAttribute="centerX" secondItem="2Ds-AZ-r34" secondAttribute="centerX" id="DGb-m6-Do1"/>
-                            <constraint firstItem="HSb-Q2-MhK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2Ds-AZ-r34" secondAttribute="leading" constant="20" id="OgI-0R-AbD"/>
+                            <constraint firstItem="lAN-Xy-clq" firstAttribute="width" secondItem="doS-be-EZj" secondAttribute="width" placeholder="YES" id="6i1-pv-jzN"/>
+                            <constraint firstItem="lAN-Xy-clq" firstAttribute="height" secondItem="doS-be-EZj" secondAttribute="height" placeholder="YES" id="EHn-t0-z6Q"/>
+                            <constraint firstItem="lAN-Xy-clq" firstAttribute="centerY" secondItem="doS-be-EZj" secondAttribute="centerY" placeholder="YES" id="Fi9-RM-T2M"/>
                             <constraint firstItem="fPe-UK-gb5" firstAttribute="leading" secondItem="doS-be-EZj" secondAttribute="leading" constant="12" id="QJ2-Ky-abf"/>
                             <constraint firstItem="l8r-gu-33x" firstAttribute="top" secondItem="DmZ-hI-cQj" secondAttribute="bottom" constant="1" id="Qsq-bg-ftU"/>
                             <constraint firstItem="xo0-Cy-fNp" firstAttribute="centerY" secondItem="fPe-UK-gb5" secondAttribute="centerY" id="Qv4-Fp-ZNG"/>
                             <constraint firstItem="DmZ-hI-cQj" firstAttribute="leading" secondItem="doS-be-EZj" secondAttribute="leading" id="UVj-y1-Md2"/>
+                            <constraint firstItem="lAN-Xy-clq" firstAttribute="centerX" secondItem="doS-be-EZj" secondAttribute="centerX" placeholder="YES" id="WWc-dz-bdu"/>
                             <constraint firstItem="xB3-Ur-rz3" firstAttribute="leading" secondItem="doS-be-EZj" secondAttribute="leading" id="duk-0x-88H"/>
                             <constraint firstAttribute="trailing" secondItem="xB3-Ur-rz3" secondAttribute="trailing" id="elq-1U-VXb"/>
                             <constraint firstItem="xo0-Cy-fNp" firstAttribute="leading" secondItem="fPe-UK-gb5" secondAttribute="trailing" constant="12" id="ghK-FC-1we"/>
@@ -758,6 +770,7 @@
                         <outlet property="filtersButton" destination="xo0-Cy-fNp" id="98t-Wj-bQg"/>
                         <outlet property="moreButton" destination="kNA-WJ-NA0" id="oze-F2-pCZ"/>
                         <outlet property="noDevicesLabel" destination="HSb-Q2-MhK" id="sYp-yb-Dya"/>
+                        <outlet property="noDevicesView" destination="lAN-Xy-clq" id="uYa-9i-lul"/>
                         <outlet property="searchBar" destination="fPe-UK-gb5" id="3fU-9k-grf"/>
                         <outlet property="setupNewDeviceButton" destination="4Cw-AT-ACb" id="by9-6y-6rD"/>
                         <outlet property="tableView" destination="l8r-gu-33x" id="12r-M7-uSW"/>
